Updates to path-nodes and paragraphs (styling)

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -128,6 +128,30 @@ html {
     display: none!important;
 }
 
+.path-taxonomy .field--name-field-class-package-paragraph .container {
+    font-size: 26px;
+    text-transform: uppercase;
+    font-weight: bold !important;
+    color: #fff;
+    font-family: "Open Sans", Sens-serif !important;  
+}
+.path-taxonomy .field--name-field-class-package-paragraph .field--name-field-link {
+    margin-top: 30px;
+}
+.path-taxonomy .angled-background-color, .path-taxonomy .angled-background-image {
+    padding-bottom: 110px;
+}
+.path-node .teacher-c-desc {
+    padding: 0!important;
+    margin-bottom: 220px;
+}
+.path-node .field--name-body {
+    margin-bottom: 60px!important;
+}
+.banner {
+    overflow: hidden!important;
+}
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
@@ -197,6 +221,7 @@ html {
     .layout-navigation__link a:hover {
         color: #000!important;
     }
+    
 }
 
 // Desktop - only
@@ -215,6 +240,7 @@ html {
     .layout__header-row .layout-navigation__dropdown-menu {
         max-width: none;
     }
+   
 }
 
 // Print
