Styling changes to pages

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -151,6 +151,9 @@ html {
 .banner {
     overflow: hidden!important;
 }
+.path-taxonomy .news-container {
+    padding: 0!important;
+}
 
 // --------------------------------------------------
 // Variants
