Taxonomy breadcrumb chances

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -154,6 +154,9 @@ html {
 .path-taxonomy .news-container {
     padding: 0!important;
 }
+.path-taxonomy .breadcrumb {
+    margin-top: 70px;
+}
 
 // --------------------------------------------------
 // Variants
