--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -163,6 +163,9 @@ html {
 .path-taxonomy ul li {
     color: #000;
 }
+.path-taxonomy ul {
+    line-height: 35px;
+}
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
