updated background on .well class

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -166,6 +166,9 @@ html {
 .path-taxonomy ul {
     line-height: 35px;
 }
+.well {
+    background: none!important;
+}
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
