--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -169,6 +169,11 @@ html {
 .well {
     background: none!important;
 }
+.path-taxonomy .teacher-c-desc .col-lg-9 {
+    text-align: left;
+    font-size: 16px;
+    color: #555;
+}
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
@@ -1540,9 +1545,9 @@ div[role=heading] {
     background-color: #f1f1f1 !important;
     padding-left: 50px;
     padding-right: 50px;
-    padding-top: 25px;
+    padding-top: 50px;
     padding-bottom: 50px;
-    border-top: 25px solid #fff;
+    border: 1px solid rgba(0,0,0,0.05)!important;
 }
 
 .view-vih-teacher-teaches-classes .views-field-name-1 {
