--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1843,6 +1843,12 @@ ul.layout-navigation {
     border: 1px solid #00a5e2!important;
     margin-bottom: 25px;
 }
+.path-taxonomy .field--name-field-class-package-paragraph .field--name-field-link {
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .path-taxonomy article .col-sm-6 {
     width: 100%!important;
 }
