Fixes for class table teaser

--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-class-table-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-class-table-teaser.html.twig
@@ -32,8 +32,8 @@
             {{ content.field_vih_class_image }}
         </td>
         <td class="col-xs-6 multiple-elements">
-            {{ content.description }}
-            <a href="#" class="btn-more">
+            {{ content.field_class_summary }}
+            <a href="{{ url }}" class="btn-more">
                         <i class="fa fa-info-circle" aria-hidden="true"></i>
                     </a>
         </td>
@@ -52,7 +52,7 @@
             {{ content.field_vih_class_image }}
         </div>
         <div class="col-xs-6 vih-col-center">
-            {{ content.description }}
+            {{ content.field_class_summary }}
         </div>
     </div>
 </div>#}
