news-banner image positioning

--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-class-table-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-class-table-teaser.html.twig
@@ -32,7 +32,9 @@
             {{ content.field_vih_class_image }}
         </td>
         <td class="col-xs-6 multiple-elements">
-            {{ content.field_class_summary }}
+             {% if content.field_class_summary|render is not empty %}
+    <div class="field-image-wrapper">{{ content.field_class_summary }}</div>
+  {% endif %}
             <a href="{{ url }}" class="btn-more">
                         <i class="fa fa-info-circle" aria-hidden="true"></i>
                     </a>
@@ -52,7 +54,9 @@
             {{ content.field_vih_class_image }}
         </div>
         <div class="col-xs-6 vih-col-center">
-            {{ content.field_class_summary }}
+           {% if content.field_class_summary|render is not empty %}
+    <div class="field-image-wrapper">{{ content.field_class_summary }}</div>
+  {% endif %}
         </div>
     </div>
 </div>#}
