--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1843,11 +1843,18 @@ ul.layout-navigation {
     border: 1px solid #00a5e2!important;
     margin-bottom: 25px;
 }
+.modal-course-description {
+    text-align: left!important;
+}
 .path-taxonomy .field--name-field-class-package-paragraph .field--name-field-link {
     max-width: 100%!important;
     display: flex!important;
     justify-content: center!important;
     align-items: center!important;
+}
+.news-banner {
+    background-size: cover!important;
+    background-position: center!important;
 }
 .path-taxonomy article .col-sm-6 {
     width: 100%!important;
