--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1856,6 +1856,9 @@ ul.layout-navigation {
     background-size: cover!important;
     background-position: center!important;
 }
+.field--name-field-news-tags {
+    display: none;
+}
 .path-taxonomy article .col-sm-6 {
     width: 100%!important;
 }
