dropdown width fixed

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1153,6 +1153,9 @@ div[role=heading] {
 .path-frontpage .field--name-field-bg-image {
     display: none!important;
 }
+.layout-navigation__dropdown-menu {
+    width: 100%;
+}
 
 .image-overlay {
     width: 100%;
