background positioning fix

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1156,6 +1156,9 @@ div[role=heading] {
 .layout-navigation__dropdown-menu {
     width: 100%;
 }
+.panel-banner {
+    background-position: center!important;
+}
 
 .image-overlay {
     width: 100%;
