--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1159,6 +1159,14 @@ div[role=heading] {
 .panel-banner {
     background-position: center!important;
 }
+label.control-label.option:before {
+        content: "/f00c";
+    font-family: fontawesome;
+    color: #fff;
+    display: inline-block;
+    position: absolute;
+    right: -15px;
+}
 
 .image-overlay {
     width: 100%;
