--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1171,6 +1171,10 @@ div[role=heading] {
         margin-right: 10px;
 }
 
+.btn-search .glyphicon-search {
+    top: 2px;
+}
+
 .image-overlay {
     width: 100%;
     height: 80px;
