fix for image overlay

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1170,10 +1170,10 @@ div[role=heading] {
 .btn-radio-select.active label.control-label.option {
         margin-right: 10px;
 }
-.image-overlay {
-    padding: 0;
-    padding-bottom: 10px;
-padding-right: 10px;
+.views-field-field-vih-course-image .image-overlay {
+    padding: 0!important;
+    padding-bottom: 10px!important;
+padding-right: 10px!important;
 }
 .btn-search .glyphicon-search {
     top: 2px;
