--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1170,6 +1170,9 @@ div[role=heading] {
 .field--type-entity-reference-revisions .field--label {
     display: none;
 }
+.teacher-c-desc {
+    margin-bottom: 80px;
+}
 .field--type-entity-reference-revisions .col-md-9 .field--label { 
 display: block!important; }
 .angled-background-image-element {
