thank you page updated

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
@@ -1,10 +1,11 @@
-<h1>
+<br>
+   <h1>
     {{ "Tak for din tilmelding!"|t }}
 </h1>
-
+<br>
 <div class="row">
-    <div class="col-xs-12">
-        <a href="{{ url('<front>') }}" class="btn btn-default form-group">
+    <div class="col-xs-12 field--name-field-link">
+        <a href="{{ url('<front>') }}" class="btn-arrow">
             {{ "Tilbage til forside"|t }}
         </a>
     </div>
