Updates to subscription thank you page

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-thank-you-page.html.twig
@@ -1,10 +1,10 @@
 <br>
-   <h1>
+   <h3>
     {{ "Tak for din tilmelding!"|t }}
-</h1>
+</h3>
 <br>
 <div class="row">
-    <div class="col-xs-12 field--name-field-link">
+    <div class="col-xs-12 tilmeldings-knap">
         <a href="{{ url('<front>') }}" class="btn-arrow">
             {{ "Tilbage til forside"|t }}
         </a>
