--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1190,6 +1190,9 @@ div[role=heading] {
     display: block;
     width: 0;
 }
+.tilmeldings-knap {
+    max-width: 340px!important;
+}
 .field--type-entity-reference-revisions .col-md-9 .field--label { 
 display: block!important; }
 .angled-background-image-element {
