made the breadcrumb look like the desktop version

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -2025,7 +2025,7 @@ ul.layout-navigation {
     .field--name-field-vih-user-photo img {
         min-width: 100%;
     }
-    .breadcrumb li, .breadcrumb li a {
+/*    .breadcrumb li, .breadcrumb li a {
         width: 100%;
         font-size: 12px!important;
         display: flex;
@@ -2045,7 +2045,7 @@ ul.layout-navigation {
     }
     .breadcrumb li:first-child a:before {
         padding-right: 10px;
-    }
+    }*/
     header .layout__header-row {
             width: 100%!important;
     display: flex!important;
