--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -546,6 +546,21 @@
       //transform: translateX(60%);
     }
   }
+  
+  .dropdown.layout-navigation__dropdown{
+    & ul.layout-navigation.layout-navigation--full-width.layout--large-screen-only.dropdown-menu.layout-navigation__dropdown-menu{
+      & li.layout-navigation__link{
+        & a{
+          color: white;
+          background-color: rgb(0, 128, 175) !important;
+          &:hover, &:active {
+            background-color: $brand-primary !important;
+            color: white;
+          }
+        }
+      }
+    }
+  }
 }
 
 // Tablet - and up
