--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/radio-selection/_vih_class.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/radio-selection/_vih_class.scss
@@ -35,7 +35,7 @@ html[lang="da"] .course-periods-accordion .class-selection label.btn-radio-selec
         padding: 0px 20px;
         top: -3px;
         position: relative;
-        background-color: none;
+        background: none;
         color: #bbb;
         border: 1px solid rgba(0, 0, 0, 0.2);
         &.active {
@@ -93,6 +93,16 @@ html[lang="da"] .course-periods-accordion .class-selection label.btn-radio-selec
           right: 20px;
         }
       }
+    }
+  }
+  & .accordion-flex-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    & .col-xs-12.col-sm-3{
+      margin-bottom: 15px;
     }
   }
 }
