mobile top logo clickable

--- a/docroot/themes/custom/site/templates/custom/header.html.twig
+++ b/docroot/themes/custom/site/templates/custom/header.html.twig
@@ -73,5 +73,9 @@
         {% if page.header_navigation %}
             {{ page.header_navigation }}
         {% endif %}
+        <div class="logo-wrapper-mobile">
+          <a href="/"><img src="{{ base_path ~ directory }}/dist/images/vih_logo_white.svg"></a>
+        </div>
+
     </div>
 </header>
