VIH-58 text changed ans required fields

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
@@ -72,7 +72,7 @@
 </div>
 
 {# Adult data START #}
-<h5><i class="material-icons form-icon">account_circle</i> &nbsp;{{ "Voksen personlige oplysninger"|t }}</h5>
+<h5><i class="material-icons form-icon">account_circle</i> &nbsp;{{ "Kontaktpolysninger for forælder eller værge"|t }}</h5>
 <div class="row form-group">
     <div class="col-md-6">
         {{ form['adultDataLeft'] }}
