VI-11 Frontpage. The text in the gray boxes is upper need - lower

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -899,6 +899,14 @@ flex-direction: column;
     height: 150px;
 }
 
+.field-content{
+  & span.fpnews-content{
+    & p{
+      text-transform: none;
+      }
+    }
+ }
+
 .layout__news .btn {
     border-radius: 0px;
     background: #00bcff;
