VI-133 contact table cells on 100% on mobile

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -2042,6 +2042,9 @@ ul.layout-navigation {
     }
    
     .page-node-type-vih-long-cource article .table-bordered tr {
+      & td{
+        width: 100%;
+      }
         display: flex;
         flex-direction: column;
     }
