VI-132 long cource prise table to div change

--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_loader.scss
@@ -3,3 +3,4 @@
 @import 'video';
 @import '_paragraph-type-file';
 @import '_paragraph-type-teacher-class-description';
+@import '_paragraph-type-user-quote';
