--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1877,7 +1877,7 @@ ul.layout-navigation {
   .layout-navigation__dropdown-menu {
     max-width: none;
     border-radius: 0;
-    width: 100%;
+    min-width: 100%;
     li a {
       padding: 23px 15px;
     }
