--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -143,20 +143,20 @@ view_mode ? view_mode|clean_class,
 
       </div>
 
-      <div class="row lc-btn-box">
+      <div class="row vih-btn-box">
         <div class="col-xs-12">
           <a href="{{ url('vih_subscription.long_course_order_create', {'course': node.id}) }} " class="btn-arrow btn-center">{{ "Begynd nu"|trans }}</a>
         </div>
       </div>
 
-      <div class="row lc-contact-box">
+      <div class="row vih-contact-box">
         <div class="col-xs-12">
           <h4>{{ 'Har du spørgsmal til kurset?'|trans }}</h4>
           {{ content.field_vih_cource_contact_person }}
         </div>
       </div>
 
-      <div class="row lc-price-box">
+      <div class="row vih-price-box">
         <div class="col-xs-12">
           <h4>{{ "Prisoversigt"|trans }}:</h4>
 
