--- a/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class-package--full.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class-package--full.html.twig
@@ -104,15 +104,15 @@ view_mode ? view_mode|clean_class,
         <div class="col-sm-6">
         </div>
       </div>
-      <div class="row lc-btn-box">
+      <div class="row vih-btn-box">
         <div class="col-xs-12">
         </div>
       </div>
-      <div class="row lc-contact-box">
+      <div class="row vih-contact-box">
         <div class="col-xs-12">
         </div>
       </div>
-      <div class="row lc-price-box">
+      <div class="row vih-price-box">
         <div class="col-xs-12">
         </div>
       </div>
