--- a/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class.html.twig
@@ -104,7 +104,7 @@ view_mode ? view_mode|clean_class,
         <div class="col-sm-6">
         </div>
       </div>
-      <div class="row lc-btn-box">
+      <div class="row vih-btn-box">
         <div class="col-xs-12">
         </div>
       </div>
