--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -2050,7 +2050,7 @@ ul.layout-navigation {
         padding-right: 40px!important;
     }
    
-    .page-node-type-vih-long-cource article .table-bordered tr {
+    .page-node-type-vih-long-cource article .table-bordered tr, .page-node-type-vih-long-course-order article .table-bordered tr{
       & td{
         width: 100%;
       }
